wordpress/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: qhoa83/wordpress
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
          - name: wordpress-ps-storage
            mountPath: /tmp
      volumes:
        - name: wordpress-ps-storage
          persistentVolumeClaim:
            claimName: wordpress-pv-claim
