wordpress/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"        
        volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
          name: mysql
      volumes:
          - name: mysql-persistent-storage
            persistentVolumeClaim:
             claimName: mysql-pv-claim
