wordpress/pod_deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: centos
  name: centos
spec:
  containers:
  - image: centos:8
    name: centos
    command: ["/bin/sleep", "3650d"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
