wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-db
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
#  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: wp-web
spec:
  selector:
    app: wordpress
  ports:
  - port: 80
  type: LoadBalancer
